Add Navbar, top-section and Works section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brian Kamau's Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello Microverse!</h1>
+    <nav class="top-nav">
+      <a href="#" class="my-logo">My Logo</a>
+      <a href=""
+        ><img
+          src="./images/Hamburger.png"
+          class="Hamburger-icon"
+          alt="Hamburger-icon"
+      /></a>
+    </nav>
+
+    <!-- ========top-section======== -->
+    <section class="top-section">
+      <div class="top-section">
+        <h2 class="top-sect-heading">
+          I’m Brian. <br />
+          Glad to see <br />
+          you!
+        </h2>
+        <p class="top-sect-paragraph">
+          I’m a software developer! <br />
+          I can help you build a product , feature or website. Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hesitate to contact me.
+        </p>
+        <a href="#" class="top-sect-connect">LET’S CONNECT</a>
+        <ul class="S-media-icons-ul">
+          <li class="S-media-icons-li">
+            <a
+              href="https://twitter.com/bk_rian"
+              class="top-sect-Smedia-icons"
+              id="Twitter-icon"
+              ><img src="./images/Twitter-icon.png" alt="Twitter-icon" />
+            </a>
+          </li>
+          <li class="S-media-icons-li">
+            <a
+              href="https://www.linkedin.com/feed/"
+              class="top-sect-Smedia-icons"
+              id="Linked-icon"
+              ><img src="./images/Linkedin-icon.png" alt="Linked-icon" />
+            </a>
+          </li>
+          <li class="S-media-icons-li">
+            <a href="#" class="top-sect-Smedia-icons" id="Email-icon"
+              ><img src="./images/Email-icon.png" alt="Email-icon" />
+            </a>
+          </li>
+          <li class="S-media-icons-li">
+            <a
+              href="https://github.com/Brian3Kamau"
+              class="top-sect-Smedia-icons"
+              id="GitHub-icon"
+              ><img src="./images/GitHub-icon.png" alt="GitHub-icon" />
+            </a>
+          </li>
+          <li class="S-media-icons-li">
+            <a href="#" class="top-sect-Smedia-icons" id="Two-fin--icon"
+              ><img src="./images/Two-fin-icon.png" alt="Two-fin-icon" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- ========Work Section======== -->
+    <section class="work-section">
+      <div class="work-section-container">
+        <div class="work-sect-1" id="">
+          <div class="work-sect-image">
+            <img
+              src="./images/Snapshoot Portfolio1.png"
+              class="work-sect-image"
+              alt="Snapshoot-image"
+            />
+          </div>
+          <div class="work-sect-text"></div>
+        </div>
+        <div class="work-sect-2" id=""></div>
+        <div class="work-sect-3" id=""></div>
+        <div class="work-sect-4" id=""></div>
+      </div>
+    </section>
   </body>
 </html>
