--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- ========Nav-bar========   -->
     <nav class="top-nav">
       <a href="./images/Bk.jpg" class="my-logo">My Logo</a>
       <a href=""
@@ -20,14 +21,26 @@
           class="Hamburger-icon"
           alt="Hamburger-icon"
       /></a>
+
+      <ul class="desktop-nav-links">
+        <a href="#top_section" class="desktop-navlink-a"
+          ><li class="desktop-navlink-li">Portfolio</li></a
+        >
+        <a href="#about_myself" class="desktop-navlink-a"
+          ><li class="desktop-navlink-li">About</li>
+        </a>
+        <a href="#contact_me" class="desktop-navlink-a"
+          ><li class="desktop-navlink-li">Contact</li></a
+        >
+      </ul>
     </nav>
 
     <!-- ========top-section======== -->
-    <section class="top-section">
+    <section class="top-section" id="top_section">
       <div class="top-section">
         <h2 class="top-sect-heading">
-          I’m Brian. <br />
-          Glad to see <br />
+          I’m Brian Kamau. <br class="top-heading-br" />
+          Glad to see <br class="top-heading-br2" />
           you!
         </h2>
         <p class="top-sect-paragraph">
@@ -36,7 +49,7 @@
           of my work and experience! If you like what you see and have a project
           you need coded, don’t hesitate to contact me.
         </p>
-        <a href="#contact-me" class="top-sect-connect">LET’S CONNECT</a>
+        <a href="#contact_me" class="top-sect-connect">LET’S CONNECT</a>
         <ul class="S-media-icons-ul">
           <li class="S-media-icons-li">
             <a
@@ -55,7 +68,7 @@
             </a>
           </li>
           <li class="S-media-icons-li">
-            <a href="#contact-me" class="top-sect-Smedia-icons" id="Email-icon"
+            <a href="#contact_me" class="top-sect-Smedia-icons" id="Email-icon"
               ><img src="./images/Email-icon.png" alt="Email-icon" />
             </a>
           </li>
@@ -128,7 +141,7 @@
         </div>
         <!-- ===work-Section-Two=== -->
         <div class="work-sect-2" id="">
-          <div class="work-sect-image">
+          <div class="work-sect-image work-sect-image2">
             <img
               src="./images/Snapshoot Portfolio2.png"
               class="work-sect-image"
@@ -136,8 +149,8 @@
             />
           </div>
           <div class="work-sect-text">
-            <p class="work-sect-title">
-              Multi-Post <br />
+            <p class="work-sect-title work-sect-title2">
+              Multi-Post <br class="multi-post-br" />
               Stories
             </p>
             <ul class="canopy-ul">
@@ -186,7 +199,7 @@
               alt="Snapshoot-image"
             />
           </div>
-          <div class="work-sect-text">
+          <div class="work-sect-text work-sect-text-mobile">
             <p class="work-sect-title tonic3">Tonic</p>
             <ul class="canopy-ul">
               <li class="canopy-li">
@@ -224,10 +237,50 @@
               ><button class="work-btn"><b>See project</b></button></a
             >
           </div>
+          <!-- ==Desktop-version content== -->
+          <!-- <div class="work-sect-text work-sect-text-desktop">
+            <p class="work-sect-title tonic3">Tonic</p>
+            <ul class="canopy-ul">
+              <li class="canopy-li">
+                <label for="canopy1" class="canopy-label">CANOPY</label>
+                <input type="radio" id="canopy1" />
+              </li>
+              <li>
+                <label for="back-end-dev1" class="back-end-dev-label"
+                  >Back End Dev</label
+                >
+                <input type="radio" id="back-end-dev1" />
+              </li>
+              <li>
+                <label for="2015" class="label-2015">2015</label>
+              </li>
+            </ul>
+            <p class="work-sect-text1">
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+            <div class="language-btns">
+              <a href="#"
+                ><button class="lang-btns" id="html-btn">HTML</button>
+              </a>
+              <a href="#"
+                ><button class="lang-btns" id="css-btn">CSS</button>
+              </a>
+              <a href="#"
+                ><button class="lang-btns" id="JavaScript-btn">
+                  JavaScript
+                </button>
+              </a>
+            </div>
+            <a href="https://github.com/Brian3Kamau" class="work-btn-a"
+              ><button class="work-btn"><b>See project</b></button></a
+            >
+          </div> -->
+          <!-- ==End of Desktop-version-content== -->
         </div>
         <!-- ===Work-Section-Four=== -->
         <div class="work-sect-4" id="">
-          <div class="work-sect-image">
+          <div class="work-sect-image work-sect-image4">
             <img
               src="./images/Snapshoot Portfolio4.png"
               class="work-sect-image"
@@ -235,8 +288,8 @@
             />
           </div>
           <div class="work-sect-text">
-            <p class="work-sect-title">
-              Multi-Post <br />
+            <p class="work-sect-title work-sect-title4">
+              Multi-Post <br class="multi-post-br" />
               Stories
             </p>
             <ul class="canopy-ul">
@@ -279,119 +332,161 @@
       </div>
     </section>
     <!-- ========About-Myself-Section======== -->
-    <section class="About-Myself-Section">
+    <section class="About-Myself-Section" id="about_myself">
       <div class="About-Myself-container">
-        <h2 class="About-Myself-h2">About Myself</h2>
-        <p class="About-Myself-paragraph">
-          Hello I’m a software developer! I can help you build a product ,
-          feature or website. Look through some of my work and experience! If
-          you like what you see and have a project you need coded, don’t
-          hesitate to contact me.
-        </p>
-        <a href="#contact-me" class="top-sect-connect">LET’S CONNECT</a>
-        <ul class="S-media-icons-ul">
-          <li class="S-media-icons-li">
-            <a
-              href="https://twitter.com/bk_rian"
-              class="top-sect-Smedia-icons"
-              id="Twitter-icon"
-              ><img src="./images/Twitter-icon.png" alt="Twitter-icon" />
-            </a>
-          </li>
-          <li class="S-media-icons-li">
-            <a
-              href="https://www.linkedin.com/feed/"
-              class="top-sect-Smedia-icons"
-              id="Linked-icon"
-              ><img src="./images/Linkedin-icon.png" alt="Linked-icon" />
-            </a>
-          </li>
-          <li class="S-media-icons-li">
-            <a href="#contact-me" class="top-sect-Smedia-icons" id="Email-icon"
-              ><img src="./images/Email-icon.png" alt="Email-icon" />
-            </a>
-          </li>
-          <li class="S-media-icons-li">
-            <a
-              href="https://github.com/Brian3Kamau"
-              class="top-sect-Smedia-icons"
-              id="GitHub-icon"
-              ><img src="./images/GitHub-icon.png" alt="GitHub-icon" />
-            </a>
-          </li>
-          <li class="S-media-icons-li">
-            <a href="#" class="top-sect-Smedia-icons" id="Two-fin--icon"
-              ><img src="./images/Two-fin-icon.png" alt="Two-fin-icon" />
-            </a>
-          </li>
-        </ul>
-        <a href="./images/Brian Kamau- CV......pdf" class="About-Myself-btn-a"
-          ><button class="About-Myself-btn"><b>Get my resume</b></button></a
-        >
-        <div class="languages-container">
-          <label for="languages" class="languages-label"
-            ><b>Languages</b></label
+        <div class="About-myself-text">
+          <h2 class="About-Myself-h2">About Myself</h2>
+          <p class="About-Myself-paragraph">
+            Hello I’m a software developer! I can help you build a product ,
+            feature or website. Look through some of my work and experience! If
+            you like what you see and have a project you need coded, don’t
+            hesitate to contact me.
+          </p>
+          <a href="#contact_me" class="top-sect-connect connect2-desktop"
+            >LET’S CONNECT</a
           >
+          <ul class="S-media-icons-ul S-media-icons-ul-desktop">
+            <li class="S-media-icons-li twitter-icon-li">
+              <a
+                href="https://twitter.com/bk_rian"
+                class="top-sect-Smedia-icons"
+                id="Twitter-icon"
+                ><img src="./images/Twitter-icon.png" alt="Twitter-icon" />
+              </a>
+            </li>
+            <li class="S-media-icons-li linked-icon-li">
+              <a
+                href="https://www.linkedin.com/feed/"
+                class="top-sect-Smedia-icons"
+                id="Linked-icon"
+                ><img src="./images/Linkedin-icon.png" alt="Linked-icon" />
+              </a>
+            </li>
+            <li class="S-media-icons-li email-icon-li">
+              <a
+                href="#contact_me"
+                class="top-sect-Smedia-icons"
+                id="Email-icon"
+                ><img src="./images/Email-icon.png" alt="Email-icon" />
+              </a>
+            </li>
+            <li class="S-media-icons-li GitHub-icon">
+              <a
+                href="https://github.com/Brian3Kamau"
+                class="top-sect-Smedia-icons"
+                id="GitHub-icon"
+                ><img src="./images/GitHub-icon.png" alt="GitHub-icon" />
+              </a>
+            </li>
+            <li class="S-media-icons-li Two-fin-icon-li">
+              <a href="#" class="top-sect-Smedia-icons" id="Two-fin--icon"
+                ><img src="./images/Two-fin-icon.png" alt="Two-fin-icon" />
+              </a>
+            </li>
+          </ul>
+          <a href="./images/Brian Kamau- CV......pdf" class="About-Myself-btn-a"
+            ><button class="About-Myself-btn get-resume-desktop">
+              <b>Get my resume</b>
+            </button></a
+          >
+        </div>
+        <div class="lang-frameworks-skills-container">
+          <div class="languages-container">
+            <label for="languages" class="languages-label"
+              ><b>Languages</b></label
+            >
 
-          <select name="languages" id="languages">
-            <option value="" selected disabled></option>
-            <option value="html">HTML</option>
-            <option value="css">CSS</option>
-            <option value="JavaScript">JavaScript</option>
-          </select>
-        </div>
-        <div class="About-Myself-lang-icons">
-          <a href="#"
-            ><img
-              src="./images/JavaScript.png"
-              class="lang-icons"
-              alt="JavaScript-icon"
-            />
-          </a>
-          <a href="#"
-            ><img src="./images/HTML.png" class="lang-icons" alt="html-icon" />
-          </a>
-          <a href="#"
-            ><img src="./images/CSS.png" class="lang-icons" alt="css-icon" />
-          </a>
-        </div>
-        <div class="frameworks-skills">
-          <label for="frameworks" class="frameworks-label"
-            ><b>Frameworks</b>
-          </label>
+            <select name="languages" id="languages">
+              <option value="" selected disabled></option>
+              <option value="html">HTML</option>
+              <option value="css">CSS</option>
+              <option value="JavaScript">JavaScript</option>
+            </select>
+          </div>
+          <!-- ===mobile-only-icons=== -->
+          <div class="About-Myself-lang-icons">
+            <a href="#"
+              ><img
+                src="./images/JavaScript.png"
+                class="lang-icons"
+                alt="JavaScript-icon"
+              />
+            </a>
+            <a href="#"
+              ><img
+                src="./images/HTML.png"
+                class="lang-icons"
+                alt="html-icon"
+              />
+            </a>
+            <a href="#"
+              ><img src="./images/CSS.png" class="lang-icons" alt="css-icon" />
+            </a>
+          </div>
+          <!-- ===End-of-mobile-only-icons=== -->
+          <!-- ==desktop-only-icons=== -->
+          <div class="About-Myself-lang-icons-desktop">
+            <a href="#"
+              ><img
+                src="./images/JavaScript-desktop-icon.png"
+                class="lang-icons-desktop"
+                alt="JavaScript-icon"
+              />
+            </a>
+            <a href="#"
+              ><img
+                src="./images/html-desktop-icon.png"
+                class="lang-icons-desktop"
+                alt="html-icon"
+              />
+            </a>
+            <a href="#"
+              ><img
+                src="./images/css-desktop-icon.png"
+                class="lang-icons-desktop"
+                alt="css-icon"
+              />
+            </a>
+          </div>
+          <!-- ==end-of-desktop-only-icons== -->
+          <div class="frameworks-skills frameworks-cont">
+            <label for="frameworks" class="frameworks-label"
+              ><b>Frameworks</b>
+            </label>
 
-          <select name="frameworks" id="frameworks">
-            <option value="" selected disabled></option>
-            <option value="bootstrap">Boostrap</option>
-            <option value="react">React</option>
-          </select>
-        </div>
-        <img
-          src="./images/Separator -line-Bottom.png"
-          class="seperator-line"
-          alt="seperator-line"
-        />
-        <div class="frameworks-skills">
-          <label for="frameworks" class="frameworks-label"
-            ><b>Skills</b>
-          </label>
+            <select name="frameworks" id="frameworks">
+              <option value="" selected disabled></option>
+              <option value="bootstrap">Boostrap</option>
+              <option value="react">React</option>
+            </select>
+          </div>
+          <img
+            src="./images/Separator -line-Bottom.png"
+            class="seperator-line"
+            alt="seperator-line"
+          />
+          <div class="frameworks-skills">
+            <label for="frameworks " class="frameworks-label skills-label"
+              ><b>Skills</b>
+            </label>
 
-          <select name="skills" id="skills">
-            <option value="" selected disabled></option>
-            <option value="front-end">Front-End Development</option>
-            <option value="back-end">Back-End Development</option>
-          </select>
+            <select name="skills" id="skills">
+              <option value="" selected disabled></option>
+              <option value="front-end">Front-End Development</option>
+              <option value="back-end">Back-End Development</option>
+            </select>
+          </div>
+          <img
+            src="./images/Separator -line-Bottom.png"
+            class="seperator-line"
+            alt="seperator-line"
+          />
         </div>
-        <img
-          src="./images/Separator -line-Bottom.png"
-          class="seperator-line"
-          alt="seperator-line"
-        />
       </div>
     </section>
     <!-- ========Contact-me-Section======== -->
     <section class="contact-me-section">
-      <div class="contact-me-container" id="contact-me">
+      <div class="contact-me-container" id="contact_me">
         <h2 class="contact-me-h2">Contact me</h2>
         <p class="contact-me-paragraph">
           If you have an application you are interested in developing, a feature
