--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ========Nav-bar========   -->
     <nav class="top-nav">
       <a href="./images/Bk.jpg" class="my-logo">My Logo</a>
-      <a href=""
+      <a href="#" class="hamburger-a"
         ><img
           src="./images/Hamburger.png"
           class="Hamburger-icon"
